version final fonctionnel
